# RPI-Pico-Testing

./: .gitignore  testing_pico_sdk.cmake
systick-test/: CMakeLists.txt
systick-test/src/: main.cpp
